--- a/src/Components/Cards/Cards.module.css
+++ b/src/Components/Cards/Cards.module.css
@@ -1,223 +1,28 @@
-body{
-    background:radial-gradient(circle, rgba(23, 52, 69, 0.9), rgba(39, 174, 96, 0.0)), url(./../../images/covid19_bg.jpg);
-    background-position: top center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
-    color: #fff;
-  }
-
-  .circleUp {
-    z-index: -99;
-    /*margin-top: -180px;*/
-  }
-
-  .dropDown {
-    z-index: 1;
-    margin-top: 130px;
-  }
-
-  select {
-    max-width: 12px;
-  }
-
-  .PrivateNotchedOutline-root-5 {
-    border: none;
-  }
-  
-  .CardContent {
-    margin-top: 10px;
-  }
-  
-  .txtDeath {
-    color: #ef476f;
-  }
-  
-  .txtRecover {
-    color: #27ae60;
-    margin-top: 25px !important;
-  }
-  
-  .txtRecover0 {
-    color: #27ae60;
-    margin-top: 0px !important;
-  }
-  
-  .Paper {
-    width: 50%;
-  }
-  
-  .graph {
-    text-align: center;
-    margin: 40px 20px !important;
-    background: #fff;
-    color: red;
-    border-radius: 5px;
-    box-shadow: 0px 0px 20px 20px rgba(0, 0, 0, 0.1), 0 0 100px rgba(0, 0, 0, 0.2) inset;
-  }
-  
-  .circleContainer {
-    margin: auto;
-    width: 606px;
-    height: 666px;
-    border-radius: 50%;
-    border:0px solid red;
-    display:grid;
-    -ms-transform: translateY(5%);
-    transform: translateY(5%);
-  }
-  
-  .circleContainer .deg1, .deg2, .deg3, .deg5, .deg6, .deg7, .degFlagg {
-      display: block;
-      border: 0px solid rgba(0, 0, 0, 0.1);
-      border-radius:50%;
-      text-align:center;
-      box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.1), 0 0 50px rgba(0, 0, 0, 0.2) inset;
-  }
-
-  .deg1, .deg2, .deg3, .deg4, .deg5, .deg6, .deg7 {
-    width: 200px;
-    height: 200px;
-  }
-  .deg1 p{
-    color: rgba(0, 0, 0, 0.65);
-  }
-
-  .topMargin {
-    margin-top: -190px;
-  }
-  .degFlag img {
-    width: 40px;
-    margin: 75px auto;
-  }
-  
-  .deg1 {
-    grid-column:3 / span 2;
-    grid-row: 1 /span 2;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50%;
-    color: rgba(0, 0, 0, 0.87) !important;
-  }
-  .deg2 {
-    grid-column:1 / span 2;
-    grid-row: 2 /span 2;
-    background: #8e44ad;
-    border-radius: 50%;
-  }
-  .deg3 {
-    grid-column:5 / span 2;
-    grid-row: 2 /span 2;
-    background: #f39c12;
-    border-radius: 50%;
-  }
-  .deg4 {
-    grid-column:3 / span 2;
-    grid-row: 3 /span 2;
-    border: none;
-    border-radius: 50%;
-    box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.1);
-    box-shadow: 0px 0px 0px 5px rgba(255, 255, 255, 0.2), 20px 20px 1000px rgba(0, 0, 0, 0.5) inset;
-  }
-  .deg5 {
-    grid-column:1 / span 2;
-    grid-row: 4 /span 2;
-    background: #27ae60;
-    border-radius: 50%;
-  }
-  .deg6 {
-    grid-column:5 / span 2;
-    grid-row: 4 /span 2;
-    background: #ef476f;
-    border-radius: 50%;
-  }
-  .deg7 {
-    grid-column:3 / span 2;
-    grid-row: 5 /span 2;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50%;
-  }
-  
-  .deg7 .MuiCardContent-root {
-    margin-top: 10px !important;
-  }
-  
-  /* if we want to bring the circles closer to the center*/
-  /*
-  .deg1, .deg7{margin:0 -1em 0 14em;}
-  .deg2, .deg5{margin:0 -1em 0 14em;}
-  .deg3, .deg6{margin: 0 1em 0 -1.5em}
-  .deg4{margin: -6em 0em 0 0em;}
-  */
-
-@media only screen and (max-width: 600px) {
-  .deg1, .deg2, .deg3, .deg4, .deg5, .deg6, .deg7 {
-    width: 190px;
-    height: 190px;
-  }
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px 0;
 }
 
-@media only screen and (max-width: 414px) {
-  .circleContainer {
-    width: 420px;
-    height: 420px;
-  }
-  .deg1, .deg2, .deg3, .deg4, .deg5, .deg6, .deg7 {
-    width: 135px;
-    height: 135px;
-  }
-  .deg4 img {
-    width: 135px;
-  }
-  h2{
-    font-size: 20px !important;
-  }
-  h5{
-    font-size: 16px !important;
-  }
-  p {
-    font-size: 14px !important;
-  }
-  .txtRecover {
-    margin-top: 0px !important;
-  }
-  .MuiInputBase-root > .MuiOutlinedInput-root >
-  .MuiAutocomplete-inputRoot > .MuiInputBase-fullWidth >
-  .MuiInputBase-formControl > .MuiInputBase-adornedEnd >
-  .MuiOutlinedInput-adornedEnd {
-    width: 50px !important;
-  }
+.card {
+  margin: 0 2% !important;
 }
 
-@media only screen and (max-width: 375px) {
-  .circleContainer {
-    width: 385px;
-    height: 385px;
-  }
-  .deg1, .deg2, .deg3, .deg4, .deg5, .deg6, .deg7 {
-    width: 125px;
-    height: 125px;
-  }
-  .deg4 img {
-    width: 125px;
-  }
-  h2{
-    font-size: 18px !important;
-  }
-  h5{
-    font-size: 15px !important;
-  }
-  p {
-    font-size: 13px !important;
-  }
-  .txtRecover {
-    margin-top: 0px !important;
-  }
-  .MuiInputBase-root > .MuiOutlinedInput-root >
-  .MuiAutocomplete-inputRoot > .MuiInputBase-fullWidth >
-  .MuiInputBase-formControl > .MuiInputBase-adornedEnd >
-  .MuiOutlinedInput-adornedEnd {
-    width: 50px !important;
+.infected {
+  border-bottom: 10px solid rgba(0, 0, 255, 0.5);
+}
+
+.recovered{
+  border-bottom: 10px solid rgba(0, 255, 0, 0.5);
+}
+
+.deaths{
+  border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+}
+
+@media only screen and (max-width: 770px) {
+  .card {
+    margin: 2% 0 !important;
   }
 }
